@@ -1,5 +1,5 @@
 /* 
- * PPRacer 
+ * PlanetPenguin Racer 
  * Copyright (C) 2004-2005 Volker Stroebel <volker@planetpenguin.de>
  *
  * Copyright (C) 1999-2001 Jasmin F. Patry
@@ -23,58 +23,50 @@
 #define _LOOP_H_
 
 #include "SDL.h"
-#include "translation.h"
+#include "ppogl/translation.h"
+#include "ppogl/audio.h"
 
-// we include this here because this headers
+// including this here because this headers
 // are used in nearly all modes
 #include "pp_types.h"
 #include "gl_util.h"
-#include "ppgltk/ui_mgr.h"
-#include "ppgltk/ui_theme.h"
 #include "render_util.h"
-#include "game_config.h"
-
-
-/// Game state
-typedef enum {
-    ALL_MODES = -2,
-    NO_MODE = -1,
-    SPLASH = 0,
-    GAME_TYPE_SELECT,
-    EVENT_SELECT,
-	EVENT_RACE_SELECT,
-    RACE_SELECT,
-    LOADING,
-    INTRO,
-    RACING,
-    GAME_OVER,
-    PAUSED,
-    RESET,
-    CREDITS,
-	CONFIGURATION,
-	CONFIG_GRAPHICS,
-	CONFIG_VIDEO,
-	CONFIG_AUDIO,
-	CONFIG_KEYBOARD,
-	CONFIG_JOYSTICK,
-	QUIT,
-	BENCHMARK,
-    NUM_GAME_MODES
-} game_mode_t;
-
-void set_game_mode( game_mode_t mode );
-void main_loop();
-bool is_mode_change_pending();
+#include "winsys.h"
+#include "gameconfig.h"
 
 void loop_mouse_func (int button, int state, int x, int y);
 void loop_mouse_motion_func( int x, int y );
 void loop_keyboard_func(SDLKey key, SDLMod mod, bool release, int x, int y);
 
-
-
 class GameMode
 {
-
+public:
+	enum Mode{
+	    NO_MODE = -1,
+		SPLASH = 0,
+		GAME_TYPE_SELECT,
+		EVENT_SELECT,
+		EVENT_RACE_SELECT,
+		RACE_SELECT,
+		LOADING,
+		INTRO,
+		RACING,
+		GAME_OVER,
+		PAUSED,
+		RESET,
+		CREDITS,
+		CONFIGURATION,
+		CONFIG_GENERAL,
+		CONFIG_VIDEO,
+		CONFIG_AUDIO,
+		CONFIG_KEYBOARD,
+		CONFIG_JOYSTICK,
+		CONFIG_GRAPHICS,
+		QUIT,
+		BENCHMARK,
+		NUM_GAME_MODES
+	};
+	
 protected:
 	/// custom function for drawing snow in the ui
 	void drawSnow( float timeStep, bool windy = false );
@@ -84,7 +76,6 @@ public:
 	virtual ~GameMode(){}; 
 	virtual void loop(float timeStep) = 0;
 	
-		
 	virtual bool keyboardEvent(SDLKey key, bool release){return false;};
 	virtual bool keyPressEvent(SDLKey key){return false;};
 	virtual bool keyReleaseEvent(SDLKey key){return false;};
@@ -94,8 +85,27 @@ public:
 	virtual bool mouseButtonReleaseEvent(int button, int x, int y){return false;};
 	
 	static GameMode* currentMode;
-	static game_mode_t mode;
-	static game_mode_t prevmode;
+	static GameMode::Mode mode;
+	static GameMode::Mode prevmode;
+	
+	static int resolutionX;
+	static int resolutionY; 	
+	
+	static void setMode(GameMode::Mode mode);
+	static void mainLoop();
+	static bool isModeChangePending();
+	
+	// multiscreen is an experimental feature
+	enum MultiscreenMode{
+		MULTISCREEN_NONE = -1,
+		MULTISCREEN_HORIZ = 0,
+		MULTISCREEN_VERT = 2,
+		MULTISCREEN_BOTH = 4
+	};
+	static enum MultiscreenMode exp_multiscreen;
+	
 };
+
+void updateDisplay();
 
 #endif // _LOOP_H_
